--- a/fosssite/templates/fosssite/index.html
+++ b/fosssite/templates/fosssite/index.html
@@ -3,20 +3,27 @@
     <head>
     <title>FOSS LNMIIT</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/slate/bootstrap.min.css">
-<link rel="stylesheet" href="{% static 'css/blog.css' %}">
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
  <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
     
     </head>
-   <body>
+   <body style="background-color:#2B2B2B;">
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Home</a></li>
+            <li><a href="#events">Events</a></li>
+            <li><a href="#contributions">Contributions</a></li>
+            <li><a href="#blog">Blog</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="page-header">
     {% if user.is_authenticated %}
     <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 {% endif %}
-        <h1><a href="/">FOSS-LNMIIT</a></h1>
-    </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
             {% block content %}
             {% endblock %}
             </div>
