--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -5,7 +5,7 @@
   <head>
     <title>Foss-LNMIIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
 
     <!--  Load site-specific customizations after bootstrap. -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -23,14 +23,14 @@
       <div class="container">
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="home">Home</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#archive">Contributions</a></li>
             <li><a href="#blog">Blog</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
         <li><a href="signup"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
         </div>
       </div>
