--- a/fosssite/templates/fosssite/index.html
+++ b/fosssite/templates/fosssite/index.html
@@ -2,17 +2,17 @@
 <html>
     <head>
     <title>FOSS LNMIIT</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/slate/bootstrap.min.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
  <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
     
     </head>
-   <body style="background-color:#2B2B2B;">
+   <body>
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#contributions">Contributions</a></li>
             <li><a href="#blog">Blog</a></li>
