--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -12,9 +12,9 @@
                         <div class="mail-text">Or sign up using your email address.</div>
                                 <div class="forms">
                                     <form action="" method="get" name="register">
-                                    <input name="fullname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                    <input name="fullname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                    <input name="fullname" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                    <input name="firstname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                    <input name="lastname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                    <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
                                     <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                     <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
                                     </form>
