--- a/fosssite/templates/fosssite/loggedin.html
+++ b/fosssite/templates/fosssite/loggedin.html
@@ -1,5 +1,7 @@
-{% extends 'fosssite/index.html' %}
+{% extends 'fosssite/home.html' %}
 {% block content %}
-
-	<h2> Hi {{full_name}} Logged in!!</h2>
-<% endblock %>
+	 <script type="text/javascript">
+	 		alert("loggedin");
+	 </script>
+	<!--<h2> Hi {{full_name}} Logged in!!</h2>-->
+{% endblock %}
