--- a/fosssite/templates/fosssite/login.html
+++ b/fosssite/templates/fosssite/login.html
@@ -1,22 +1,19 @@
-{% extends 'fosssite/index.html' %}
+{% extends 'fosssite/home.html' %}
 {% block content %}
   <div id="wrapper">
-    <div class="join">Welcome Back!!</div>
-      <div class="clr"></div>
-        <div class="login-options">Choose on of the following log in methods.</div>
-           <a class="twitter" href="#">Twitter</a>
-              <a class="facebook" href="#">Facebook</a>
-                <a class="google" href="#">Google+</a>
-                  <div class="clr"><hr /></div>
-                    <div class="mail-text">Or sign in below.</div>
-                        <div class="forms">
-                            <form action="/auth/" method="POST">{% csrf_token %}
-                              <input name="fullname" type="text" placeholder="Username or Email ID" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                              <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
-                              <button type="submit" class="btn btn-default">Log In</button>
-                            </form>
-                        </div>
-                        
-
+    <div class="join">
+      Welcome Back!!
+    </div>
+        <div class="clr">
+          <hr />
+        </div>
+            <div class="mail-text">LogIn</div>
+                <div class="forms">
+                  <form action="/auth/" method="POST">{% csrf_token %}
+                    <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                    <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
+                    <button type="submit" class="btn btn-default">Log In</button>
+                  </form>
+                </div>
   </div>
 {% endblock %}
