--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html>
   {%load staticfiles%}
+
   <head>
-    <title>Foss-LNMIIT</title>
+    <title>fossLNMIIT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/paper/bootstrap.min.css">
-
-    <!--  Load site-specific customizations after bootstrap. -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,28 +15,26 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.js"></script>
     <![endif]-->
   </head>
+
   <body>
 
-    <!-- Responsive navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="home">Home</a></li>
-            <li><a href="#events">Events</a></li>
-            <li><a href="#archive">Contributions</a></li>
-            <li><a href="#blog">Blog</a></li>
+            <li class="active"><a href="/">Home</a></li>
+            <li><a href="">Events</a></li>
+            <li><a href="">Contributions</a></li>
+            <li><a href="">Blog</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-        <li><a href="signup"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
+            <li><a href="signup"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+            <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
         </div>
       </div>
     </div>
 
-
-    <!-- Load Bootstrap JavaScript components -->
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </body>
