--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -1,15 +1,10 @@
-{% extends 'fosssite/index.html' %}
+{% extends 'fosssite/home.html' %}
   {% block content %}
                 <div id="wrapper">
-  <div class="join">HOLA!!</div>
-  
+                  <div class="join">HOLA!!</div>
+
           <div class="clr"></div>
-            <div class="login-options">Choose on of the following sign up methods.</div>
-                  <a class="twitter" href="#">Twitter</a>
-                    <a class="facebook" href="#">Facebook</a>
-                    <a class="google" href="#">Google+</a>
-                    <div class="clr"><hr /></div>
-                        <div class="mail-text">Or sign up using your email address.</div>
+                        <div class="mail-text">SignUp</div>
                                 <div class="forms">
                                     <form action="" method="get" name="register">
                                     <input name="firstname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
@@ -17,9 +12,8 @@
                                     <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
                                     <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                     <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
-                                    </form>
-                                    </div>
+                                </form>
+                          </div>
             <a class="create-acc" href="#">Create My Account</a>
-
-</div>
+          </div>
 {% endblock %}
