--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -1,20 +1,19 @@
 {% extends 'fosssite/home.html' %}
+{% block profile %}
+{% endblock %}
   {% block content %}
-                <div id="wrapper">
-                  <div class="join">HOLA!!</div>
-
-          <div class="clr"></div>
-                        <div class="mail-text">SignUp</div>
+          <div id="wrapper">
+             <div class="join">Join the FOSS Community</div>
+                  <div class="clr"></div>
                                 <div class="forms">
                                     <form action="" method="POST" name="register">{% csrf_token %}
-                                    <input name="firstname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                    <input name="lastname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                    <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                    <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
-                                    <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
-                                    <button type="submit" class="btn btn-default">Create My Account</button>
-                                </form>
-                          </div>
-
+                                      <input name="firstname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                      <input name="lastname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                      <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                      <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
+                                      <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
+                                      <button type="submit" class="btn btn-default">Create My Account</button>
+                                    </form>
+                                </div>
           </div>
 {% endblock %}
