profileuser template pushed

--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -3,5 +3,77 @@
 {% endblock %}
 {% block content %}
 
-	<h2> Hi {{fullname}} Logged in!!</h2>
+
+<div id='main-content' class='container'>
+	<div class='row'>
+		<div class='col-md-12'>
+			<div class='page-header'>
+				<h2>
+					Sagar Chand Agarwal
+					<span class='pull-right'>
+						<small>fossLNMIIT User Profile</small>
+					</span>
+				</h2>
+			</div>
+		</div>
+	</div>
+
+	<div class='row'>
+				<div class='col-md-4'>
+					<div class='row'>
+				<img alt="F340b72deeb79a210ec2138dea6e8561" class="img img-rounded" height="200" src="https://secure.gravatar.com/avatar/f340b72deeb79a210ec2138dea6e8561" width="200" />
+				</div>
+				<div class='row'>
+				<ul class='nav navbar-nav'>
+				</ul>
+				</div>
+	</div>
+	<div class='col-md-8'>
+		<!--
+		<div class='row'>
+			<div class="col-md-12">
+				<center>
+				<div class="col-md-6">
+					<h3 class="bg-info2" style="padding: 0.5em;">Speaker / Champion Count</h3>
+					<h3 class="bg_info2">0</h3>
+				</div>
+				<div class="col-md-6"> <h3 class="bg-info2" style="padding: 0.5em;">Attended</h3>
+					<h3 class="bg_info2">1</h3>
+				</div>
+				</center>
+			</div>-->
+			<div class='col-md-12'>
+				<h3 class='bg-info2' style='padding: 0.5em;'>User Brief</h3>
+				<table class='table table-bordered'>
+						<tr>
+							<th width='30%'>Name</th>
+							<td>Sagar Chand Agarwal</td>
+						</tr>
+						<tr>
+							<th>Handle</th>
+							<td></td>
+						</tr>
+						<tr>
+							<th>Registered On</th>
+							<td>
+								May 20 2016
+							</td>
+						</tr>
+						<tr>
+							<th colspan=2>About Me</th>
+						</tr>
+						<tr>
+							<td colspan=2>
+								<br/>
+							</td>
+						</tr>
+				</table>
+			</div>
+		</div>
+	</div>
+	</div>
+
+
+
+
 {% endblock %}
