--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -1,5 +1,7 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
+<li><a href="/edit_user_profile/"><span class="glyphicon glyphicon-log-in"></span> Edit Profile</a></li>
+<li><a href="/logout/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
 {% endblock %}
 {% block content %}
 
