--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -38,7 +38,44 @@
     </div>
 
     {% block content %}
-    {% endblock %}
+    
+      {% endblock %}
+
+    <footer>
+      <div class='container'>
+        <div class='row'>
+          <hr/>
+          <div class='col-md-4'>
+            <img alt="fosslnmiit-logo" src="{% static 'assets/foss.png' %}" height="40" width="40" /> <br/>
+          </div>
+          <div class='col-md-5'></div>
+          <div class='col-md-3'>
+            <div class='row'>
+              <div class='col-md-12'><small><strong>Foss LNMIIT Community</strong></small></div>
+            </div>
+            <div class='row'>
+              <div class='col-md-12'>
+                <ul class='nav navbar-nav'>
+                  <li><a href="http://www.twitter.com/fosslnmiit" target="_blank"><img alt="Twitter" height="40" src="{% static 'assets/twitter.png' %}" width="40" /></a></li>
+                  <li><a href="http://www.facebook.com/fosslnmiit" target="_blank"><img alt="Facebook" height="40" src="{% static 'assets/fb.png' %}" width="40" /></a></li>
+                  <li><a href="https://groups.google.com/forum/#!forum/fosslnmiit" target="_blank"><img alt="Group" height="40" src="{% static 'assets/google.png' %}" width="40" /></a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-md-12'>
+            <center>
+              <small>
+                Made with <a href='http://www.django.org' target='_blank'>Django</a> with love from <a href="http://www.getbootstrap.com" target='_blank'>Twitter Bootstrap</a> &amp; <a href="http://www.bootswatch.com" target='_blank'>Bootswatch</a>.
+              </small>
+            </center>
+            <br/>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
