--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -7,8 +7,8 @@
                   <div class="clr"></div>
                                 <div class="forms">
                                     <form action="" method="POST" name="register">{% csrf_token %}
-                                      <input name="firstname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                      <input name="lastname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                      <input name="fname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="fname"/>
+                                      <input name="uname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="lname"/>
                                       <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                       <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
