--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -22,15 +22,15 @@
       <div class="container">
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
+            <li class="active"><a href="{% url 'fosssite:home' %}">Home</a></li>
             <li><a href="">Events</a></li>
             <li><a href="">Contributions</a></li>
             <li><a href="">Blog</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% block profile %}
-            <li><a href="signup"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-            <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a href="{% url 'fosssite:UserFormView'%}"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+            <li><a href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
             {% endblock %}
           </ul>
         </div>
@@ -38,7 +38,7 @@
     </div>
 
     {% block content %}
-    
+
       {% endblock %}
 
     <footer>
