--- a/fosssite/templates/fosssite/login.html
+++ b/fosssite/templates/fosssite/login.html
@@ -12,7 +12,10 @@
         </div>
             <div class="mail-text">Login with your credentials!!</div>
                 <div class="forms">
-                  <form action="/auth/" method="POST">{% csrf_token %}
+                    {% if error_message %}
+                        <p><strong>{{ error_message }}</strong></p>
+                    {% endif %}
+                  <form action="" method="POST">{% csrf_token %}
                     <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
                     <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
                     <button type="submit" class="btn btn-default">Log In</button>
