--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -1,7 +1,7 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
-<li><a href="/edit_user_profile/"><span class="glyphicon glyphicon-log-in"></span> Edit Profile</a></li>
-<li><a href="/logout/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+<li><a href="/edit_user_profile/"><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li>
+<li><a href="/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 {% endblock %}
 {% block content %}
 
@@ -49,7 +49,7 @@
 				<table class='table table-bordered'>
 						<tr>
 							<th width='30%'>Name</th>
-							<td>Sagar Chand Agarwal</td>
+							<td>{{ username }}</td>
 						</tr>
 						<tr>
 							<th>Handle</th>
