--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -6,9 +6,13 @@
              <div class="join">Join the FOSS Community</div>
                   <div class="clr"></div>
                                 <div class="forms">
-                                    <form action="" method="POST" name="register">{% csrf_token %}
+                                    <form action="" method="POST" name="register" enctype="multipart/form-data">
+                                        {% csrf_token %}
+                                        {% for field in form%}
+                                        {{ field.errors }}
+                                        {% endfor %}
                                       <input name="fname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="fname"/>
-                                      <input name="uname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="lname"/>
+                                      <input name="lname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="lname"/>
                                       <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
                                       <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
