login,signup,logout working properly

--- a/fosssite/templates/fosssite/edituser.html
+++ b/fosssite/templates/fosssite/edituser.html
@@ -1,6 +1,8 @@
 {% extends 'fosssite/home.html' %}
 
 {% block profile %}
+<li><a href="{% url 'fosssite:profileuser' %}"><span class="glyphicon glyphicon-edit"></span>Profile</a></li>
+<li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 {% endblock %}
 
 {% block content %}
