--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -1,7 +1,7 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
-<li><a href="/edit_user_profile/"><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li>
-<li><a href="/logout/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+<li><a href="{% url 'fosssite:edit_user_profile' %}"><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li>
+<li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 {% endblock %}
 {% block content %}
 
