--- a/fosssite/templates/fosssite/home.html
+++ b/fosssite/templates/fosssite/home.html
@@ -23,9 +23,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'fosssite:home' %}">Home</a></li>
-            <li><a href="">Events</a></li>
-            <li><a href="">Contributions</a></li>
-            <li><a href="">Blog</a></li>
+            <li><a href="{% url 'fosssite:events' %}">Events</a></li>
+            <li><a href="{% url 'fosssite:contributions' %}">Contributions</a></li>
+            <li><a href="{% url 'fosssite:blog' %}">Blog</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% block profile %}
