--- a/fosssite/templates/fosssite/tempedit.html
+++ b/fosssite/templates/fosssite/tempedit.html
@@ -23,63 +23,63 @@
                <label for="user_email">Email</label>
                <input autofocus="autofocus" class="form-control" id="user_email"{{ user_form.email }}
              </div>
+             <br/>
              <div class='form-group'>
                <label for="user_name">First Name</label>
                <input class="form-control" id="user_name" {{ user_form.first_name }}
              </div>
+             <br/>
              <div class='form-group'>
                <label for="user_name">Last Name</label>
                <input class="form-control" id="user_name" {{ user_form.last_name }}
              </div>
+             <br/>
+             <div class='form-group'>
+               <label for="user_name">Password</label><br/><br/>
+               <a href="{% url 'fosssite:changepassword' %}">
+               <button type="button" class="btn btn-primary">Change Password</button></a>
+             </div>
+             <br/>
              <div class='form-group'>
                <label for="user_handle">Handle</label>
                <input class="form-control" id="user_handle" {{ profile_form.handle }}
              </div>
-
-             <div class='col-md-6'>
-
-               <div class='form-group'>
-                 <div class='input-group'>
-                   <span class="input-group-addon"><i class="fa fa-twitter"></i></span>
-                   <input class="form-control" id="user_twitter_handle" placeholder="http://www.twitter.com/example" size="30" type="text"  {{ profile_form.twitterurl }}
-                 </div>
-                 <br/>
-                 <div class='input-group'>
-                   <span class="input-group-addon"><i class="fa fa-facebook"></i></span>
+             <br/>
+             <div class='form-group'>
+                 <label for="user_twitter_handle">Twitter</label>
+                 <input class="form-control" id="user_twitter_handle" placeholder="http://www.twitter.com/example" size="30" type="text"  {{ profile_form.twitterurl }}
+             </div>
+             <br/>
+            <div class='form-group'>
+                 <label for="user_facebook_profile">Facebook</label>
                    <input class="form-control" id="user_facebook_profile" placeholder="http://www.facebook.com/example" size="30" type="text" {{ profile_form.facebookurl }}
                  </div>
                  <br/>
-                 <div class='input-group'>
-                   <span class="input-group-addon"><i class="fa fa-linkedin"></i></span>
+                 <div class='form-group'>
+                     <label for="user_linkedin_profile">Linkedin</label>
                    <input class="form-control" id="user_linkedin_profile" placeholder="http://www.linkedin.com/example" size="30" type="text" {{ profile_form.lnkdnurl }}
                  </div>
                  <br/>
-                 <div class='input-group'>
-                   <span class="input-group-addon"><i class="fa fa-github"></i></span>
+                 <div class='form-group'>
+                  <label for="user_github_profile">Github</label>
                    <input class="form-control" id="user_github_profile" placeholder="http://www.github.com/example" size="30" type="text" {{ profile_form.githuburl }}
                  </div>
                  <br/>
-                 <div class='input-group'>
-                   <span class="input-group-addon"><i class="fa fa-home"></i></span>
+                  <div class='form-group'>
+                    <label for="user_homepage">Personal</label>
                    <input class="form-control" id="user_homepage" placeholder="http://www.example.com" size="30" type="text" {{ profile_form.example }}
                  </div>
-             </div>
-           </div>
-         </div>
-         <div class='row'>
-           <div class='col-md-12'>
-
              <div class='form-group'>
                <label for="user_about_me">About me</label>
-               <textarea class="form-control" cols="40" id="user_about_me" rows="10" {{ profile_form.about_me }}
-
-               </textarea>
+               <textarea class="form-control"  id="user_about_me" {{ profile_form.about_me }}</textarea>
              </div>
-           </div>
-         </div>
+
          <div class='form-group'>
            <input class="btn btn-primary btn-lg" name="commit" type="submit" value="Update" />
          </div>
+     </div>
+ </div>
+
        </form>
       </div>
    </div>
