except avatar, all things working properly

--- a/fosssite/templates/fosssite/changepassword.html
+++ b/fosssite/templates/fosssite/changepassword.html
@@ -18,11 +18,9 @@
    <div class='page-body'>
      <form accept-charset="UTF-8" action="" class="form" enctype="multipart/form-data" id="edit_user" method="post"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /><input name="_method" type="hidden" value="put" /><input name="authenticity_token" type="hidden" value="KW/3tAwoPpmq/MzCtU1Eolw7K8jFlTE0QLduKwL8K8U=" /></div>
          {% csrf_token %}
-
          {%  if error %}
-             {{error}}
+         <p class="text-danger">{{error}}</p>
          {% endif %}
-         <br/>
          <br/>
          <br/>
          <div class='row'>
@@ -41,7 +39,7 @@
                </div>
 
 
-         <input type="submit" value="Change Password"/>
+         <input class="btn btn-primary btn-lg" type="submit" value="Update Password"/>
      </div>
  </div>
        </form>
