--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -1,5 +1,6 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
+<li><a href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
 {% endblock %}
   {% block content %}
           <div id="wrapper">
@@ -8,13 +9,16 @@
                                 <div class="forms">
                                     <form action="" method="POST" name="register" enctype="multipart/form-data">
                                         {% csrf_token %}
-                                        {% for field in form%}
-                                        {{ field.errors }}
-                                        {% endfor %}
+                                    
+                                        <p class="text-danger">{{ form.first_name.errors }}</p>
                                       <input name="fname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="fname"/>
+                                      <p class="text-danger">{{ form.last_name.errors }}</p>
                                       <input name="lname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="lname"/>
+                                      <p class="text-danger">{{ form.username.errors }}</p>
                                       <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
+                                      <p class="text-danger">{{ form.email.errors }}</p>
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
+                                      <p class="text-danger">{{ form.password.errors }}</p>
                                       <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
                                       <button type="submit" class="btn btn-default">Create My Account</button>
                                     </form>
