--- a/fosssite/templates/fosssite/tempedit.html
+++ b/fosssite/templates/fosssite/tempedit.html
@@ -40,6 +40,7 @@
                <button type="button" class="btn btn-primary">Change Password</button></a>
              </div>
              <br/>
+
              <div class='form-group'>
                <label for="user_handle">Handle</label>
                <input class="form-control" id="user_handle" {{ profile_form.handle }}
@@ -69,9 +70,12 @@
                     <label for="user_homepage">Personal</label>
                    <input class="form-control" id="user_homepage" placeholder="http://www.example.com" size="30" type="text" {{ profile_form.example }}
                  </div>
+
              <div class='form-group'>
-               <label for="user_about_me">About me</label>
+               <label for="user_about_me">About me </label>
                <textarea class="form-control"  id="user_about_me" {{ profile_form.about_me }}</textarea>
+                   <br/>
+                    (Max. 100 characters)
              </div>
 
          <div class='form-group'>
