--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -9,16 +9,16 @@
                                 <div class="forms">
                                     <form action="" method="POST" name="register" enctype="multipart/form-data">
                                         {% csrf_token %}
-                                    
-                                        <p class="text-danger">{{ form.first_name.errors }}</p>
+
+                                        <p class="text-danger">{{ form.first_name.errors.as_text  }}</p>
                                       <input name="fname" type="text" placeholder="First Name" size="40" onClick="border: 1px solid #30a8da;" id="fname"/>
-                                      <p class="text-danger">{{ form.last_name.errors }}</p>
+                                      <p class="text-danger">{{ form.last_name.errors.as_text  }}</p>
                                       <input name="lname" type="text" placeholder="Last Name" size="40" onClick="border: 1px solid #30a8da;" id="lname"/>
-                                      <p class="text-danger">{{ form.username.errors }}</p>
+                                      <p class="text-danger">{{ form.username.errors.as_text  }}</p>
                                       <input name="username" type="text" placeholder="Username" size="40" onClick="border: 1px solid #30a8da;" id="username"/>
-                                      <p class="text-danger">{{ form.email.errors }}</p>
+                                      <p class="text-danger">{{ form.email.errors.as_text  }}</p>
                                       <input name="email" type="text" placeholder="Email ID" size="40" onClick="border: 1px solid #30a8da;" id="mail"/>
-                                      <p class="text-danger">{{ form.password.errors }}</p>
+                                      <p class="text-danger">{{ form.password.errors.as_text  }}</p>
                                       <input name="password" type="password" placeholder="Password" size="40" onClick="border: 1px solid #30a8da;" id="password"/>
                                       <button type="submit" class="btn btn-default">Create My Account</button>
                                     </form>
