--- a/fosssite/templates/fosssite/tempedit.html
+++ b/fosssite/templates/fosssite/tempedit.html
@@ -40,7 +40,12 @@
                <button type="button" class="btn btn-primary">Change Password</button></a>
              </div>
              <br/>
+             <div class='form-group'>
+               <label for="user_avatar">Avatar</label><br/><br/>
+               <input id="user_avatar" name="avatar" type="file" />
+             </div>
 
+           <br/>
              <div class='form-group'>
                <label for="user_handle">Handle</label>
                <input class="form-control" id="user_handle" {{ profile_form.handle }}
