--- a/fosssite/templates/fosssite/profileuser.html
+++ b/fosssite/templates/fosssite/profileuser.html
@@ -1,6 +1,6 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
-<li><a href=""><span class="glyphicon glyphicon-user"></span> Welcome {{ request.user }}</a></li>
+<li><a href="{% url 'fosssite:profileuser' %}"><span class="glyphicon glyphicon-user"></span> Welcome {{ request.user }}</a></li>
 <li><a href="{% url 'fosssite:edit_user_profile' %}"><span class="glyphicon glyphicon-edit"></span> Edit Profile</a></li>
 <li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 {% endblock %}
