--- a/fosssite/templates/fosssite/changepassword.html
+++ b/fosssite/templates/fosssite/changepassword.html
@@ -4,7 +4,7 @@
 
 
 {% block profile %}
-<li><a href="{% url 'fosssite:profileuser' %}"><span class="glyphicon glyphicon-edit"></span>Profile</a></li>
+<li><a href="{% url 'fosssite:profileuser' name=request.user %}"><span class="glyphicon glyphicon-edit"></span>Profile</a></li>
 <li><a href="{% url 'fosssite:logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 {% endblock %}
 
