Signup by email verification(in progress)

--- a/fosssite/templates/email/password_reset_email.html
+++ b/fosssite/templates/email/password_reset_email.html
@@ -4,12 +4,11 @@
 {% trans "Please go to the following page and choose a new password:" %}
     {% block reset_link %}
         {{ domain }}{% url 'fosssite:confirm_password' uidb64=uid token=token %}
-    
     {% endblock %}
-{% trans "Your username, in case you've forgotten:" %} {{ user.get_username }}
+
+{% trans "Your username: " %} {{ user.get_username }}
 
 {% trans "Thanks!" %}
-
 {% blocktrans %} {{ site_name }} Team{% endblocktrans %}
 
 {% endautoescape %}
