--- a/fosssite/templates/fosssite/signup.html
+++ b/fosssite/templates/fosssite/signup.html
@@ -1,6 +1,8 @@
 {% extends 'fosssite/home.html' %}
 {% block profile %}
-<li><a href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+<li class="main-nav-link">
+  <a class="nav-link" href="{% url 'fosssite:login_user' %}"><span class="glyphicon glyphicon-log-in"></span> LOGIN</a>
+</li>
 {% endblock %}
   {% block content %}
           <div id="wrapper">
